Avoid overflow in Table of Contents for long block implementation names

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -517,6 +517,7 @@
   @include color-assign(border, border, '1px solid here');
   border-radius: $border-radius;
   box-shadow: $box-shadow;
+  overflow-wrap: break-word;
 
   .nav__title {
     color: #fff;
